--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -15,4 +15,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         style="@style/text_display"
         android:textColor="@color/white"/>
+
+    <Button
+        android:id="@+id/back_button"
+        style="@style/button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        app:layout_constraintTop_toBottomOf="@id/color_code_result_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
